2006-07-07  arjan <arjan at yirdis dot nl>

	* utils/coverage.py: new module for code coverage.
	* setup.py: added --coverage option ro the run command, allowing for
	code coverage output.

2006-06-07  arjan <arjan at yirdis dot nl>

        * Changed Canvas and View to Gaphas. Items should still be converted.
        In other words, the application does nothing from this point.

2006-06-06  arjan <arjan at yirdis dot nl>

	* Merged Stereotypes branch.

2006-06-01  arjan <arjan at yirdis dot nl>

        * some cleanup, added TODO: comments for conversion to Gaphas.

2006-05-29  arjan <arjan at yirdis dot nl>

	* setup.py: added languages Swedish and Catalan.

2006-05-23  arjan <arjan at yirdis dot nl>

        * gaphor/undomanager.py: disconnected from diacanvas.UndoManager
        * */*actions.py: use new undoable descriptior in stead of aspects

2006-05-18  arjan <arjan at yirdis dot nl>
	* po/es.po: updated by Jordi Vilalta Prat.
	* po/ca.po: Catalan translation thanks to Jordi Vilalta Prat.

2006-05-12  arjan <arjan at yirdis dot nl>
	* po/sv.po: new language file, thanks to Daniel Nylander.

2006-02-14  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/*.py: get rid of initialize_item function, use
	metaclass instead; use __uml__ attribute for UML classes assignement;
	no need for Groupable metaclass anymore
	* gaphor/diagram/diagramline.py: added FreeLine diagram line (abstract
	class) with one disabled handle
	* gaphor/diagram/connector.py: ConnectorEndItem uses FreeLine,
	saving/loading not implemented yet
	* gaphor/diagram/lifeline.py: LifelineItem and its lifetime
	(LifetimeItem class) is separated now
	* gaphor/diagram/message.py: message name reimplemented using
	TextElement

2006-02-06  wrobell <wrobell@pld-linux.org>
	* gaphor/UML/uml2.override: provided and required interfaces of
	component realizing classifiers are visible in Component.{provided,required}
	derived associations
	* gaphor/UML/util.py: added utility functions for getting provided and